# AndreasPK.github.io

./: .gitignore  about.html  archive.html  contact.html  index.html  publish.cmd
apkblog/: LICENSE  README.md  about.html  about.rst  apkblog.cabal  archive.html  contact.html  contact.markdown  index.html  site.hs  stack.yaml
apkblog/posts/: 2018-05-19-gsoc1.html  2018-05-19-gsoc1.markdown  2018-05-19-gsoc2.markdown  2018-09-01-gsoc-report.html  2018-09-01-gsoc-report.markdown  2018-10-12-gsoc1.markdown  2019-02-01-nub-benchmarks.html  2019-02-01-nub-benchmarks.markdown  2019-02-06-Int32-considered-harmfull.html  2019-02-06-Int32-considered-harmfull.markdown  2019-02-10-Fixing the the graph register allocator.html  2019-02-10-Fixing the the graph register allocator.md  2019-02-16-Windows Calling Convention.html  2019-02-16-Windows Calling Convention.md  2019-06-17-Taking a look at GHC creates unique Ids.html  2019-06-17-Taking a look at GHC creates unique Ids.md  2019-07-06-Using ticky ticky.md
apkblog/resources/: cfg1.dot  cfg2.dot  nofib_chains_18_05.txt
apkblog/templates/: default.html
apkblog/tmp/: test.c  test.hs
apkblog/wip/: 2019-02-07-Vector - To branch or not to branch.md  2019-02-12-Improving the graph allocator 2.md  2019-03-30-DList vs OrdList.md  2019-07-10-GHC-Interals-Pointer-tagging.md  2020-02-24-GHC Internals - Case of Case.md  Bug.md  Loop Info.md  Play.hs  Strictness Return Info.md
posts/: 2015-08-23-example.html  2018-05-19-gsoc1.html  2018-05-19-gsoc2.html  2018-09-01-gsoc-report.html  2019-02-01-nub-benchmarks.html  (+6 more)
