name:                apkblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AndreasPK/apkblog#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Klebinger
maintainer:          example@example.com
copyright:           2018 Andreas Klebinger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable apkblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
